# linkedin-agent-ia

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: email_template.html
config/: settings.yaml
data/inputs/: candidates.sample.json
scripts/: bootstrap.ps1  format.sh
src/linkedin_agent/: __init__.py  app.py  cli.py  config.py  schemas.py
src/linkedin_agent/adapters/: __init__.py  candidate_source.py  linkedin_client.py  storage_client.py
src/linkedin_agent/services/: __init__.py  audit_service.py  invitation_service.py
src/linkedin_agent/utils/: __init__.py  excel.py  filters.py
src/linkedin_agent/workflows/: __init__.py  invitation_workflow.py
src/linkedin_agent_ia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_invitation_service.py  test_invitation_workflow.py
