[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-agent-ia"
version = "0.1.0"
description = "Agent IA validé humainement pour automatiser LinkedIn."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0",
  "typer>=0.12",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "black>=24.4", "ruff>=0.4", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
target-version = "py311"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
